# pattern-delay

./: .gitignore  CMakeLists.txt  README.md
source/: DistrhoPluginInfo.h  circularBuffer.cpp  circularBuffer.hpp  clock.cpp  clock.hpp  delayLine.cpp  euclideanGenerator.cpp  patternGenerator.cpp  patternGenerator.hpp  sve-pattern-delay.cpp  sve-pattern-delay.hpp
source/objects/: delayLine.cpp  delayLine.hpp
source/objects/pattern/: euclideanGenerator.cpp  patternGenerator.hpp
source/observerPattern/: observer.cpp  observer.hpp  subject.cpp  subject.hpp
